# Popova_19202

./: lab_0b.sln
game life/: console.cpp  console.h  game_board.cpp  game_board.h  m.txt  main.cpp  parser.cpp  parser.h
lab2/: ArgumentsHandler.cpp  ArgumentsHandler.h  CommandCreator.h  CommandsFactory.cpp  CommandsFactory.h  ExecutionContext.cpp  ExecutionContext.h  ICommand.h  ICommandCreator.h  WorkFlowExecutor.cpp  WorkFlowExecutor.h  WorkFlowParser.cpp  WorkFlowParser.h  WorkFlowValidator.cpp  WorkFlowValidator.h  main.cpp
lab2/Commands/: Dump.cpp  Dump.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  WriteFile.cpp  WriteFile.h
lab_0b/: lab_0b.vcxproj  main.cpp
lab_0b/Debug/: vc142.idb
lab_0b/Debug/lab_0b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab_0b.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
parser/: CSVParserArgsHandler.h  CSVParserException.h  CSVTupleParser.h  TemplateTuplePrinter.h  TemplateTupleReader.h  bitbucket-pipelines.yml  main.cpp
parser/lab_1/: CMakeLists.txt  Trit.cpp  TritSet.h
parser/lab_1/tests/: TritSetFixtures.cpp
parser/lab_4/: CMakeLists.txt  CSVParserArgsHandler.h  CSVParserException.h  CSVTupleParser.h  TemplateTuplePrinter.h  TemplateTupleReader.h
trits/lab_1/: Trit.cpp  Trit.h  TritSet.cpp  TritSet.h  main.cpp
trits/lab_1/tests/: TritSetFixtures.cpp
tritset/: trits.cpp
